--- a/kubernetes/proxy-service.yaml
+++ b/kubernetes/proxy-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    io.kompose.service: proxy
+    service: proxy
   name: proxy
 spec:
   type: LoadBalancer
@@ -11,4 +11,4 @@ spec:
     port: 80
     targetPort: 80
   selector:
-    io.kompose.service: proxy
+    service: proxy
