--- a/kubernetes/redis-deployment.yaml
+++ b/kubernetes/redis-deployment.yaml
@@ -2,18 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    io.kompose.service: redis
+    service: redis
   name: redis
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: redis
+      service: redis
   strategy: {}
   template:
     metadata:
       labels:
-        io.kompose.service: redis
+        service: redis
     spec:
       containers:
       - image: redis:alpine
