--- a/kubernetes/redis-service.yaml
+++ b/kubernetes/redis-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    io.kompose.service: redis
+    service: redis
   name: redis
 spec:
   ports:
@@ -10,4 +10,4 @@ spec:
     port: 6379
     targetPort: 6379
   selector:
-    io.kompose.service: redis
+    service: redis
