Updated readme with my experience, changed selector matchlabels to remove io.kompose
Renamed images for docker hub push

Cleaned up commit history

--- a/kubernetes/proxy-deployment.yaml
+++ b/kubernetes/proxy-deployment.yaml
@@ -6,15 +6,15 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: proxy
+      service: proxy
   strategy: {}
   template:
     metadata:
       labels:
-        io.kompose.service: proxy
+        service: proxy
     spec:
       containers:
-      - image: alklein/alklein_alation_proxy
+      - image: alklein/alation_proxy
         imagePullPolicy: "IfNotPresent"
         name: proxy
         ports:
