--- a/kubernetes/proxy-deployment.yaml
+++ b/kubernetes/proxy-deployment.yaml
@@ -7,18 +7,21 @@ spec:
   selector:
     matchLabels:
       service: proxy
-  strategy: {}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
         service: proxy
     spec:
       containers:
-      - image: alklein/alation_proxy
+      - image: alklein/alation_proxy:1.3.0
         imagePullPolicy: "IfNotPresent"
         name: proxy
         ports:
         - containerPort: 80
-        resources: {}
+        resources: {}        
       restartPolicy: Always
-      serviceAccountName: ""
