--- a/kubernetes/app-deployment.yaml
+++ b/kubernetes/app-deployment.yaml
@@ -27,7 +27,13 @@ spec:
         - containerPort: 8000
         livenessProbe:
           httpGet:
+            scheme: HTTP
             path: /health
             port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          timeoutSeconds: 3
+          successThreshold: 1
+          failureThreshold: 3
         resources: {}
       restartPolicy: Always
