--- a/kubernetes/proxy-deployment.yaml
+++ b/kubernetes/proxy-deployment.yaml
@@ -23,5 +23,15 @@ spec:
         name: proxy
         ports:
         - containerPort: 80
+        livenessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /
+            port: 80
+          initialDelaySeconds: 7
+          periodSeconds: 10
+          timeoutSeconds: 3
+          successThreshold: 1
+          failureThreshold: 3
         resources: {}        
       restartPolicy: Always
